# eq_codegen

./: CMakeLists.txt  README.md
demo/: enum_verify_001.c  enum_verify_002.c  enum_verify_003.c  enum_verify_004.c
include/: ClassData.hpp  CodegenModel.hpp  CodegenParam.hpp  CodegenParamId.hpp  CodegenParamMacro.hpp  ConstructorData.hpp  DataFetcher.hpp  MemberData.hpp  Syntax.hpp  SyntaxKind.hpp  Utils.hpp
model/: Command.cpp  Command.hpp  EnumVerify.cpp  EnumVerify.hpp  VMIRMapping.cpp  VMIRMapping.hpp
src/: ClassData.cpp  CodegenParam.cpp  ConstructorData.cpp  DataFetcher.cpp  MemberData.cpp  Utils.cpp  main.cpp
